refactor: 인스턴스 메서드 변경 및 코드 개선
- InputValidator, InputView 인스턴스 메서드로 변경
- OutputView String 대신 StringBuilder 사용하도록 변경
- OutputView get(0) 대신 getFirst() 사용도록 변경